src/FinancialForce Accounting/objects/codaCreditNoteLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpcreditnote</customHelpPage>
    <description>The line items on the credit note, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>CalculateTaxValue2FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 2 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalculateTaxValue3FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 3 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalculateTaxValueFromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditNote__c</fullName>
        <label>Credit Note Number</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveTaxRate2FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 2 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveTaxRate3FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 3 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveTaxRateFromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveUnitPriceFromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Destination Company)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationNetValue__c</fullName>
        <formula>DestinationUnitPrice__c * DestinationQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DestinationQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought by destination company.</description>
        <label>Destination Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DestinationUnitPrice__c</fullName>
        <description>The unit price for this product for destination company.</description>
        <label>Destination Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Local GLA)</relationshipLabel>
        <relationshipName>SalesCreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <formula>UnitPrice__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>Product Code.</description>
        <formula>Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductReference__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetTaxCode2ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 2 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetTaxCode3ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 3 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetTaxCodeToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Note Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>CreditNoteLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate1__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate3__c</fullName>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRateTotal__c</fullName>
        <formula>TaxRate1__c + TaxRate2__c + TaxRate3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue1__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValue3__c</fullName>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxValueTotal__c</fullName>
        <formula>TaxValue1__c + TaxValue2__c + TaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Sales Credit Note Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Credit Note Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>